--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
